fix the style on small screen

--- a/responsive.css
+++ b/responsive.css
@@ -1,14 +1,16 @@
 @media (max-width: 768px) {
 
-    body{
-     
-    }
+  html, body {
+    width: 100%;
+    overflow-x: hidden;
+}
     .grid {
         grid-template-columns: 1fr;
         width: 100%;            /* Full width */
         box-sizing: border-box; /* Includes padding/border in width */
         margin: 0;              /* Optional: remove margins */
         padding: 0;    
+ 
       
     }
     .grid-2 {
@@ -59,5 +61,24 @@
         font-size: 1.5rem;
     }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+    p, span {
+        word-break: break-word;
+        overflow-wrap: break-word;
+        white-space: normal;
+    }
+
+    .span-title+span {
+    
+        padding-left: 50px;
+      
+    }
+        .about-btns {
+            padding-top: 10px;
+        }
 
 }
